# rust-user-management-api

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2025-03-18-031459_roles/: down.sql  up.sql
migrations/2025-03-18-031502_users/: up.sql
src/: main.rs  routes.rs  schema.rs
src/config/: database.rs
src/handlers/: app_handler.rs  mod.rs  role_handler.rs  user_handler.rs
src/models/: role.rs  user.rs
src/repositories/: role_repository.rs  user_repository.rs
src/services/: mod.rs  role_services.rs  user_services.rs
