[package]
name = "rust-user-management-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.10"